// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ParentDashboardLayout matches snapshot 1`] = `
<div class="container max-w-xl">
  <!---->
  <eventinfo-stub funrundate="Invalid Date" displaydaysremaining="true" class="flex justify-between mb-4 px-6 lg:hidden"></eventinfo-stub>
  <div class="lg:hidden mx-4 mb-8 border rounded-lg shadow-md">
    <div class="mobile-cards lg:flex flex-wrap">
      <div class="lg:w-1/2">
        <participantcard-stub program="[object Object]" participant="[object Object]" group="0"></participantcard-stub>
        <div class="px-4 lg:px-8">
          <participantrewards-stub program="[object Object]" participant="[object Object]" show="true"></participantrewards-stub>
        </div>
      </div>
    </div>
  </div>
  <div class="hidden lg:block">
    <div class="mb-8 rounded-lg border shadow-md overflow-hidden">
      <participantgroup-stub program="[object Object]" participantgroup="[object Object]" hasonlyoneparticipant="true"></participantgroup-stub>
    </div>
  </div>
  <div class="max-w-sm mx-auto mb-8 px-8">
    <pledgebutton-stub participants="[object Object]"></pledgebutton-stub>
  </div>
  <div class="mx-4 lg:mx-0 mb-8 p-8 border-t lg:border lg:rounded-lg lg:shadow-md">
    <div class="text-center max-w-sm lg:max-w-lg mx-auto">
      <h2 class="text-xl font-semibold"></h2>
      <h3></h3>
      <sharebuttons-stub participants="[object Object]" program="[object Object]" ga_page_location="Student Card Header Section" ga_site_location="Parent Dashboard"></sharebuttons-stub>
    </div>
  </div>
  <parentdashboardaccordion-stub program="[object Object]"></parentdashboardaccordion-stub>
</div>
`;

exports[`ParentDashboardLayout matches snapshot 2`] = `
<div class="container max-w-xl">
  <betabanner-stub></betabanner-stub>
  <eventinfo-stub funrundate="Invalid Date" displaydaysremaining="true" class="flex justify-between mb-4 px-6 lg:hidden"></eventinfo-stub>
  <div class="lg:hidden mx-4 mb-8 border rounded-lg shadow-md">
    <div class="mobile-cards lg:flex flex-wrap">
      <div class="lg:w-1/2">
        <participantcard-stub program="[object Object]" participant="[object Object]" group="0"></participantcard-stub>
        <div class="px-4 lg:px-8">
          <participantrewards-stub program="[object Object]" participant="[object Object]" show="true"></participantrewards-stub>
        </div>
      </div>
    </div>
  </div>
  <div class="hidden lg:block">
    <div class="mb-8 rounded-lg border shadow-md overflow-hidden">
      <participantgroup-stub program="[object Object]" participantgroup="[object Object]" hasonlyoneparticipant="true"></participantgroup-stub>
    </div>
  </div>
  <div class="max-w-sm mx-auto mb-8 px-8">
    <pledgebutton-stub participants="[object Object]"></pledgebutton-stub>
  </div>
  <div class="mx-4 lg:mx-0 mb-8 p-8 border-t lg:border lg:rounded-lg lg:shadow-md">
    <div class="text-center max-w-sm lg:max-w-lg mx-auto">
      <h2 class="text-xl font-semibold"></h2>
      <h3></h3>
      <sharebuttons-stub participants="[object Object]" program="[object Object]" ga_page_location="Student Card Header Section" ga_site_location="Parent Dashboard"></sharebuttons-stub>
    </div>
  </div>
  <parentdashboardaccordion-stub program="[object Object]"></parentdashboardaccordion-stub>
</div>
`;
